# vcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  init_structure.py  pyproject.toml
core/schema/: __init__.py  operations.py
integrations/: __init__.py
integrations/langchain/: __init__.py  retriever.py
sdks/python/src/vcp/: __init__.py  client.py
sdks/python/src/vcp/adapters/: __init__.py  base.py
sdks/python/src/vcp/cli/: __init__.py  init.py
tests/: __init__.py
