[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcp"
version = "0.1.0"
description = "Vector Context Protocol - Open standard for semantic context retrieval"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Vectora", email = "team@vectora.ai"}]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
lancedb = ["lancedb>=0.1.0"]
qdrant = ["qdrant-client>=2.0.0"]
sqlite = ["aiosqlite>=0.19.0"]
postgresql = ["psycopg2-binary>=2.9.0"]
valkey = ["redis>=5.0.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
full = ["lancedb>=0.1.0", "qdrant-client>=2.0.0", "aiosqlite>=0.19.0", "redis>=5.0.0", "langchain>=0.1.0"]
test = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0"]
dev = ["black>=23.0", "ruff>=0.1.0", "mypy>=1.0"]

[project.scripts]
vcp = "vcp.cli.init:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vcp"]
